--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -48,22 +48,22 @@
       vertical-align: middle
       text-align: center
   #products-page-banner
-    background-image: image-url('banners/wine-banner.jpg')
+    background-image: url('/images/banners/wine-banner.jpg')
     &.oils-banner
-      background-image: image-url('banners/olive-oil-banner.jpg')
+      background-image: url('/images/banners/olive-oil-banner.jpg')
     .banner-headline
       font-size: 72px
       text-transform: capitalize
   #awards-page-banner
-    background-image: image-url('banners/news-banner.jpg')
+    background-image: url('/images/banners/news-banner.jpg')
     .banner-headline
       font-size: 72px
   #news-page-banner
-    background-image: image-url('banners/news-banner-alt.jpg')
+    background-image: url('/images/banners/news-banner-alt.jpg')
     .banner-headline
       font-size: 72px
   #gallery-page-banner
-    background-image: image-url('banners/contact_banner_photo_blur.png')
+    background-image: url('/images/banners/contact_banner_photo_blur.png')
     .banner-headline
       font-size: 72px
 
@@ -212,7 +212,7 @@
     position: absolute
     right: 35px
     top: 35px
-    background: image-url('site/close_black.svg') 0 0 no-repeat
+    background: url('/images/site/close_black.svg') 0 0 no-repeat
   h2
     font-size: 36px
     margin-bottom: 22px
@@ -495,7 +495,7 @@
       display: block
       width: 458px
       height: 454px
-      background-image: image-url('site/wine-splat.png')
+      background-image: url('/images/site/wine-splat.png')
       background-position: 0 0
       background-repeat: no-repeat
       background-size: 458px 454px
@@ -635,7 +635,7 @@
           width: 48px
           height: 48px
           border: none
-          background: #F48F1B image-url('site/search.png') no-repeat center center
+          background: #F48F1B url('/images/site/search.png') no-repeat center center
           text-indent: -10000px
 
     .news-search
