--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -39,7 +39,7 @@ header
       display: block
     width: 225px
     height: 67px
-    background: image-url('site/logo.png') no-repeat 0 0
+    background: url('/images/site/logo.png') no-repeat 0 0
     background-size: 100%
     position: absolute
     left: 50%
@@ -180,7 +180,7 @@ footer
       &.facebook
         a
           text-indent: -10000px
-          background-image: image-url('site/facebook.png')
+          background-image: url('/images/site/facebook.png')
           width: 18px
           height: 18px
           position: relative
