--- a/craft/templates/partials/footer.html
+++ b/craft/templates/partials/footer.html
@@ -1,10 +1,10 @@
 <!-- Footer -->
 <footer id="footer">
   <ul>
-    <li>{{ siteName }}</li>
-    <li>{{ contactinformation.primaryAddress }}</li>
-    <li>{{ contactinformation.primaryPhone }}</li>
-    <li><a href="mailto:{{ contactinformation.primaryEmail }}">{{ contactinformation.primaryEmail }}</a></li>
+    <li class="contact-site">{{ siteName }}</li>
+    <li class="contact-address">{{ contactinformation.primaryAddress }}</li>
+    <li class="contact-phone">{{ contactinformation.primaryPhone }}</li>
+    <li class="contact-email"><a href="mailto:{{ contactinformation.primaryEmail }}">{{ contactinformation.primaryEmail }}</a></li>
     <li class="facebook"><a href="https://www.facebook.com/PoggioLaNoce" target="_blank">Facebook</a></li>
   </ul>
   <p>© {{ now.year }} {{ siteName }}. All rights reserved.</p>
