--- a/public/css/sass/_variables.sass
+++ b/public/css/sass/_variables.sass
@@ -1,6 +1,7 @@
 $source : 'Source Sans Pro', sans-serif
 $medium-width: 1005px
 
+$header-tall-mobile: 460px
 $header-tall: 770px
 $header-short: 360px
 $header-border: 30px
