--- a/public/css/main.css
+++ b/public/css/main.css
@@ -131,11 +131,25 @@
 }
 .banners .banner .banner-headline {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
-  font-size: 42px;
-  line-height: 58px;
+  font-size: 32px;
+  line-height: 42px;
   display: table-cell;
   vertical-align: middle;
   text-align: center;
+  padding: 0 50px;
+}
+@media only screen and (min-width: 768px) {
+  .banners .banner .banner-headline {
+    padding: 0 100px;
+    font-size: 36px;
+    line-height: 58px;
+  }
+}
+@media only screen and (min-width: 1010px) {
+  .banners .banner .banner-headline {
+    font-size: 42px;
+    line-height: 58px;
+  }
 }
 .banners #products-page-banner {
   background-image: url("/images/banners/wine-banner.jpg");
@@ -245,8 +259,14 @@
 .dots {
   position: absolute;
   z-index: 10;
-  top: 657px;
+  top: 420px;
   left: 50%;
+  transform: translateX(-50%);
+}
+@media only screen and (min-width: 768px) {
+  .dots {
+    top: 657px;
+  }
 }
 .dots li {
   width: 22px;
@@ -317,6 +337,25 @@
   display: block;
 }
 
+@media only screen and (max-width: 767px) {
+  #home .arrows {
+    top: 427px;
+    margin-top: -15px;
+  }
+  #home .arrows li {
+    width: 16px;
+    height: 30px;
+    background-size: auto 30px;
+  }
+  #home .dots li {
+    width: 11px;
+    height: 11px;
+  }
+  #home .dots li.active {
+    width: 5px;
+    height: 5px;
+  }
+}
 .hidden-video {
   height: 450px;
   overflow: hidden;
