--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -2920,60 +2920,158 @@ header .header-container {
 header .header-body {
   height: 360px;
 }
-header nav {
+
+.mobile-controls {
+  position: absolute;
+  left: 12px;
+  top: 12px;
+  font-size: 24px;
+  color: #fff;
+}
+@media only screen and (min-width: 768px) {
+  .mobile-controls {
+    display: none;
+  }
+}
+.mobile-controls > i {
+  cursor: pointer;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.mobile-controls .mobile-close {
+  z-index: 2;
+  font-size: 28px;
+  display: none;
+}
+.open .mobile-controls .mobile-close {
+  display: block;
+}
+.mobile-controls .mobile-menu {
+  z-index: 0;
+}
+.open .mobile-controls .mobile-menu {
+  display: none;
+}
+
+nav {
   background-color: rgba(0, 0, 0, 0.35);
   height: 120px;
   margin-bottom: -120px;
   z-index: 1;
   position: relative;
 }
-header .logo {
+
+.logo {
   width: 225px;
   height: 67px;
   background: url("/images/site/logo.png") no-repeat 0 0;
   background-size: 100%;
   position: absolute;
   left: 50%;
-  top: 8px;
   margin-left: -112px;
+  top: 24px;
 }
-header .logo h1, header .logo h3 {
+@media only screen and (min-width: 768px) {
+  .logo {
+    top: 8px;
+  }
+}
+.logo h1, .logo h3 {
   text-indent: -10000px;
 }
-header .logo a {
+.logo a {
   width: 225px;
   height: 67px;
   display: block;
 }
-header .navigation {
-  padding-top: 93px;
+
+.navigation {
+  display: none;
+  width: 100%;
+  height: 100%;
+  padding-top: 20px;
+  background: rgba(0, 0, 0, 0.75);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 1;
+}
+.open .navigation {
   display: block;
 }
-@media only screen and (min-width: 1010px) {
-  header .navigation {
+@media only screen and (min-width: 768px) {
+  .navigation {
+    padding-top: 93px;
+    display: block;
+    width: auto;
+    height: auto;
+    background: none;
+    position: relative;
+    top: inherit;
+    bottom: inherit;
+    left: inherit;
+    right: inherit;
+    text-align: inherit;
     text-align: justify;
-    width: 850px;
+    width: 95%;
     margin: 0 auto;
   }
 }
-header .navigation:after {
+@media only screen and (min-width: 1010px) {
+  .navigation {
+    width: 850px;
+  }
+}
+.navigation:after {
   width: 100%;
   display: inline-block;
   content: ".";
   visibility: hidden;
 }
-header .navigation li {
-  display: inline-block;
+.navigation .localization-tab li {
+  padding: 0 20px;
+  height: 34px;
+  line-height: 37px;
+  font-size: 22px;
+}
+@media only screen and (min-width: 768px) {
+  .navigation .localization-tab {
+    display: none;
+  }
+}
+.navigation > li {
+  margin-top: 40px;
   text-transform: uppercase;
 }
-header .navigation a {
-  font-size: 17px;
+@media only screen and (min-width: 768px) {
+  .navigation > li {
+    margin-top: 0;
+    display: inline-block;
+  }
+}
+.navigation > li > a {
+  font-size: 24px;
   color: #fff;
   text-decoration: none;
-  padding-bottom: 10px;
+  padding-bottom: 11px;
 }
-header .navigation a.active {
+.navigation > li > a.active {
   border-bottom: 5px solid #fff;
+}
+@media only screen and (min-width: 768px) {
+  .navigation > li > a {
+    font-size: 14px;
+  }
+}
+@media only screen and (min-width: 1010px) {
+  .navigation > li > a {
+    font-size: 17px;
+    padding-bottom: 10px;
+  }
 }
 
 .user-menu {
@@ -3023,26 +3121,12 @@ header .navigation a.active {
   margin-top: 9px;
 }
 .options-menu .localization {
-  display: inline-block;
-  vertical-align: top;
+  display: none;
 }
-.options-menu .localization li {
-  padding: 0 9px;
-  height: 25px;
-  background: #fff;
-  color: #999999;
-  float: left;
-  display: block;
-}
-.options-menu .localization li.active {
-  background: #B24629;
-}
-.options-menu .localization li.active a {
-  color: #fff;
-}
-.options-menu .localization li a {
-  text-decoration: none;
-  color: #999999;
+@media only screen and (min-width: 768px) {
+  .options-menu .localization {
+    display: block;
+  }
 }
 .options-menu .cart {
   display: inline-block;
@@ -3078,6 +3162,31 @@ header .navigation a.active {
   line-height: 20px;
   font-size: 14px;
   text-align: center;
+}
+
+.localization {
+  display: inline-block;
+  vertical-align: top;
+  font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
+}
+.localization li {
+  padding: 0 9px;
+  height: 25px;
+  background: #fff;
+  color: #999999;
+  float: left;
+  display: block;
+  line-height: 26px;
+}
+.localization li.active {
+  background: #B24629;
+}
+.localization li.active a {
+  color: #fff;
+}
+.localization li a {
+  text-decoration: none;
+  color: #999999;
 }
 
 footer {
