Handle standard page heading size.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -493,7 +493,17 @@ main#content .container {
 }
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
-  font-size: 72px;
+  font-size: 52px;
+}
+@media only screen and (min-width: 768px) {
+  .container h1 {
+    font-size: 62px;
+  }
+}
+@media only screen and (min-width: 1010px) {
+  .container h1 {
+    font-size: 72px;
+  }
 }
 .container #wine h1 {
   font-size: 94px;
@@ -540,7 +550,12 @@ main#content .container {
   width: 596px;
 }
 .page-content .page-text h1 {
-  margin-bottom: 35px;
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 1010px) {
+  .page-content .page-text h1 {
+    margin-bottom: 35px;
+  }
 }
 .page-content .page-text h2 {
   box-sizing: border-box;
