Gallery page ported to mobile

--- a/craft/templates/standard_page.html
+++ b/craft/templates/standard_page.html
@@ -4,7 +4,7 @@
 {% cache globally using key craft.request.path %}
 
   {% for entry in craft.entries.section('pages').slug(craft.request.getSegment(1)) %}
-  <article class="page-content">
+  <article class="page-content standard-page">
     <div class="page-image">
       <img src="{{ entry.pageImage.first().getUrl() }}" alt="">
     </div>
