--- a/public/css/sass/shared.sass
+++ b/public/css/sass/shared.sass
@@ -187,7 +187,7 @@ nav
   .localization
     display: none
     @include breakpoint($tablet)
-      display: block
+      display: inline-block
   .cart
     display: inline-block
     vertical-align: top
