--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -3125,7 +3125,7 @@ nav {
 }
 @media only screen and (min-width: 768px) {
   .options-menu .localization {
-    display: block;
+    display: inline-block;
   }
 }
 .options-menu .cart {
